--- a/Objects/adc.build_log.htm
+++ b/Objects/adc.build_log.htm
@@ -27,62 +27,45 @@ Project File Date:  05/12/2022
 <h2>Output:</h2>
 *** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Target 1'
-Peripherie.c(2): warning: In file included from...
+adc.c(4): warning: In file included from...
+./Peripherie.h(149): warning: no newline at end of file [-Wnewline-eof]
+#endif
+      ^
 ./Peripherie.h(37): warning: padding size of 'CAN_msg' with 1 byte to alignment boundary [-Wpadded]
 typedef struct  {
         ^
-./Peripherie.h(72): warning: no newline at end of file [-Wnewline-eof]
-#endif
-      ^
-Peripherie.c(41): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-        GPIOB->MODER   &= ~(( 3 << ( 5*2)) | ( 3 << ( 6*2)));
-                       ~~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Peripherie.c(43): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-        GPIOB->OTYPER  &= ~(( 1 <<   5   ) | ( 1 <<   6   ));
-                       ~~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Peripherie.c(44): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-        GPIOB->OSPEEDR &= ~(( 3 << ( 5*2)) | ( 3 << ( 6*2)));
-                       ~~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Peripherie.c(45): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-        GPIOB->PUPDR   &= ~(( 3 << ( 5*2)) | ( 3 << ( 6*2)));
-                       ~~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Peripherie.c(46): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-        GPIOB->AFR[0]  &= ~((15 << ( 5*4)) | (15 << ( 6*4)));
-                       ~~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Peripherie.c(64): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-  pCAN->BTR &= ~(((        0x03) << 24) | ((        0x07) << 20) | ((        0x0F) << 16) | (          0x3FF));
-            ~~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Peripherie.c(140): warning: no previous prototype for function 'CAN2_TX_IRQHandler' [-Wmissing-prototypes]
-void CAN2_TX_IRQHandler (void) 
-     ^
-Peripherie.c(140): note: declare 'static' if the function is not intended to be used outside of this translation unit
-void CAN2_TX_IRQHandler (void) 
-^
-static 
-Peripherie.c(165): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-        USART2->CR1 &= ~(1<<12);                                                                //Word length 
-                    ~~ ^~~~~~~~
-Peripherie.c(190): warning: implicit conversion loses integer precision: 'int32_t' (aka 'int') to 'int16_t' (aka 'short') [-Wimplicit-int-conversion]
-        return (_2ny>>(k+1)); 
-        ~~~~~~  ~~~~^~~~~~~
-Peripherie.c(211): warning: implicitly declaring library function 'memset' with type 'void *(void *, int, unsigned int)' [-Wimplicit-function-declaration]
-                memset(storeValues, 0, sizeof(storeValues)); 
-                ^
-Peripherie.c(211): note: include the header <string.h> or explicitly provide a declaration for 'memset'
-Peripherie.c(211): warning: passing 'volatile int16_t [10]' to parameter of type 'void *' discards qualifiers [-Wincompatible-pointer-types-discards-qualifiers]
-                memset(storeValues, 0, sizeof(storeValues)); 
-                       ^~~~~~~~~~~
-Peripherie.c(227): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-        GPIOA->MODER &= ~(3<<0);                //Clear Pin PA0 
-                     ~~ ^~~~~~~
-Peripherie.c(259): warning: no newline at end of file [-Wnewline-eof]
-}
- ^
-15 warnings generated.
-compiling Peripherie.c...
+adc.c(29): warning: implicit conversion changes signedness: 'volatile int16_t' (aka 'volatile short') to 'uint16_t' (aka 'unsigned short') [-Wsign-conversion]
+                                *((uint16_t *)CAN_TxMsg.data) = transmitValue;  //Pointer typecast: 16 Bit value is saved directly in the first two positions of the 8 Bit array                                                                                                                                                                                                                                
+                                                              ~ ^~~~~~~~~~~~~
+adc.c(38): warning: implicit conversion loses integer precision: 'volatile int16_t' (aka 'volatile short') to 'int8_t' (aka 'signed char') [-Wimplicit-int-conversion]
+                                                sendUSART2(transmitValue);
+                                                ~~~~~~~~~~ ^~~~~~~~~~~~~
+adc.c(56): warning: implicit conversion loses integer precision: 'volatile uint32_t' (aka 'volatile unsigned int') to 'uint16_t' (aka 'unsigned short') [-Wimplicit-int-conversion]
+                adcValue1 = ADC1->DR;
+                          ~ ~~~~~~^~
+adc.c(60): warning: implicit conversion loses integer precision: 'unsigned int' to 'int16_t' (aka 'short') [-Wimplicit-int-conversion]
+                sum += digitalIIRFilter((adcValue1 - ADC1->DR));
+                       ~~~~~~~~~~~~~~~~  ~~~~~~~~~~^~~~~~~~~~
+adc.c(64): warning: implicit conversion loses integer precision: 'int' to 'int16_t' (aka 'short') [-Wimplicit-int-conversion]
+                                transmitValue = sum/10; 
+                                              ~ ~~~^~~
+adc.c(7): warning: no previous extern declaration for non-static variable 'msTicks' [-Wmissing-variable-declarations]
+volatile uint32_t msTicks;                        /* counts 1ms timeTicks     */
+                  ^
+adc.c(7): note: declare 'static' if the variable is not intended to be used outside of this translation unit
+volatile uint32_t msTicks;                        /* counts 1ms timeTicks     */
+         ^
+adc.c(8): warning: no previous extern declaration for non-static variable 'transmitValue' [-Wmissing-variable-declarations]
+volatile int16_t transmitValue; 
+                 ^
+adc.c(8): note: declare 'static' if the variable is not intended to be used outside of this translation unit
+volatile int16_t transmitValue; 
+         ^
+9 warnings generated.
+compiling adc.c...
 linking...
-Program Size: Code=1564 RO-data=484 RW-data=4 ZI-data=1720  
-".\Objects\adc.axf" - 0 Error(s), 15 Warning(s).
+Program Size: Code=1456 RO-data=484 RW-data=4 ZI-data=1672  
+".\Objects\adc.axf" - 0 Error(s), 9 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -108,12 +91,12 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.5.0
 
    * Component: Keil::Device:Startup:2.6.3
-      Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\arm\startup_stm32f446xx.s
-      Source file:   MDK\Device\Source\ARM\STM32F446xx_OPT.s
-      Include file:  Drivers\CMSIS\Device\ST\STM32F4xx\Include\stm32f4xx.h
       Source file:   MDK\Device\Source\ARM\STM32F4xx_OTP.s
+      Include file:  Drivers\CMSIS\Device\ST\STM32F4xx\Include\stm32f4xx.h
+      Source file:   MDK\Device\Source\ARM\STM32F446xx_OPT.s
+      Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\arm\startup_stm32f446xx.s
       Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\system_stm32f4xx.c
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
